llvm-toolchain-3.4 (1:3.4~+rc1-2) unstable; urgency=low

  * Fail the build when llvm tests are failing under amd64 + i386. More to come.
  * Fix a libclang.so.1 issue during the clang tests
  * Improve the patch 23-strlcpy_strlcat_warning_removed.diff
    (also remove the tests)
  * Make lldb 3.4 also conflict with 3.5 (Closes: #730163)
  * Make python-clang 3.4 also conflict with 3.5 (Closes: #730164)
  * Remove usr/lib/llvm-3.4/build/autoconf/LICENSE.TXT
  * silent warning "manpage-has-useless-whatis-entry" in lldb-3.4
  * silent warning "package-name-doesnt-match-sonames libclang1"
  * Refresh patch kfreebsd_v2.diff to, maybe, fix lldb build under kfreebsd.
    Thanks to Ed Maste for the patch.

 -- Sylvestre Ledru <sylvestre@debian.org>  Tue, 26 Nov 2013 15:01:03 +0100

llvm-toolchain-3.4 (1:3.4~+rc1-1) unstable; urgency=low

  * New testing upstream release
  * kfreebsd.diff removed. Applied upstream
  * Remove patch 0046-Revert-Patch-to-set-is_stmt-a-little-better-for-prol.patch
    Useless now and missleading
  * Branch from llvm-toolchain-snapshot
  * Standards-Version updated to 3.9.5

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 20 Nov 2013 21:24:28 +0100

llvm-toolchain-snapshot (1:3.4~svn194079-1) unstable; urgency=low

  * New snapshot release
  * Also install clang 3.4 examples (clang-3.4-examples) (Closes: #728260)
  * Move c-index-test* from llvm-3.4 => clang-3.4. It was triggering an
    unnecessary dependency from llvm-3.4 to libclang

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 01 Nov 2013 05:19:55 +0100

llvm-toolchain-snapshot (1:3.4~svn193628-1) unstable; urgency=low

  * New snapshot release
    - Fix the scan-build warning (Closes: #725332)
  * Merge changes from the 3.3 branch (see 1:3.3-12)
  * Add lldb-3.4-dev package
  * Remove mipsel-ftbfs.diff (applied upstream)
  * Add support of coverity checker (non-free and not packaged)
  * libprofile_rt and runtime has been removed upstream (r191835)