@@ -9,7 +9,7 @@ Build-Depends: debhelper (>= 9.0), flex, bison, dejagnu, tcl, expect,
     lsb-release, patchutils, diffstat, xz-utils, chrpath, python-dev,
     libedit-dev, swig, python-sphinx, ocaml-nox, binutils-dev, libcloog-isl-dev,
     libisl-dev (>= 0.11.1), libjsoncpp-dev,
-    lcov, procps, help2man
+    lcov, procps, help2man, gcc-4.8, g++-4.8
 Build-Conflicts: oprofile, ocaml
 Standards-Version: 3.9.5
 Homepage: http://www.llvm.org/
