@@ -1,5 +1,7 @@
 llvm-toolchain-3.4 (1:3.4~+rc1-2) unstable; urgency=low
 
+  * Force the build to gcc 4.8... gcc 4.6 used on some Debian archs does not
+    support some C++ features.
   * Fail the build when llvm tests are failing under amd64 + i386. More to come.
   * Fix a libclang.so.1 issue during the clang tests
   * Improve the patch 23-strlcpy_strlcat_warning_removed.diff
